# thread

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .yamlfmt.yml  AST_GREP_TYPES.md  AST_GREP_VENDORING_PLAN.md  CLAUDE.md  CONTRIBUTORS_LICENSE_AGREEMENT.md  Cargo.lock.license  Cargo.toml  IMPLEMENTATION_ROADMAP.md  LICENSE.md  MIGRATION_EXAMPLE.md  PHASE 0 PROGRESS AND IMPLEMENTATION ASSESSMENT.md  PHASE_0_IMPLEMENTATION_PLAN.md  PLAN.md  PROJECT_STATUS_REVIEW_2026-01-02.md  PROVENANCE_ENHANCEMENT_SPEC.md  README.md  REVIEW_README.md  VENDORED.md  _typos.toml  _unused.toml  check_output.txt  check_output_vendored.txt  check_output_vendored_2.txt  check_output_vendored_3.txt  check_output_vendored_4.txt  check_output_vendored_5.txt  check_output_vendored_6.txt  deny.toml  hk.pkl  hk.pkl.license  mise.toml  repo_status_notes.md  sbom.spdx  todo-tree.md
crates/ag-thread/ag-ast/: Cargo.toml
crates/ag-thread/ag-ast/src/: content.rs  lib.rs  node.rs  pinned.rs
crates/ag-thread/ag-check-rule/: Cargo.toml
crates/ag-thread/ag-check-rule/src/: case_result.rs  find_file.rs  lib.rs  reporter.rs  snapshot.rs  test_case.rs
crates/ast-engine/: Cargo.toml  LICENSE-MIT  PERFORMANCE.md  README.md
crates/ast-engine/benches/: performance_improvements.rs
crates/ast-engine/src/: language.rs  lib.rs  matcher.rs  meta_var.rs  node.rs  ops.rs  pinned.rs  replacer.rs  source.rs
crates/ast-engine/src/match_tree/: match_node.rs  mod.rs  strictness.rs
crates/ast-engine/src/matcher/: kind.rs  node_match.rs  pattern.rs  text.rs  types.rs
crates/ast-engine/src/matchers/: kind.rs  mod.rs  node_match.rs  pattern.rs  text.rs  types.rs
crates/ast-engine/src/replacer/: indent.rs  structural.rs  template.rs
crates/ast-engine/src/tree_sitter/: mod.rs  traversal.rs
crates/ast-grep/: Cargo.toml  README.md
crates/ast-grep/src/: error_context.rs  lib.rs  scan_trace.rs
crates/ast-grep/src/threadlang/: injection.rs  lang_globs.rs  mod.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: ast_grep.rs  engine.rs  error.rs  fastmap.rs  lib.rs  store.rs
crates/core/src/services/: discovery.rs  mod.rs  requests.rs  rule.rs  scan.rs  tracing.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/diff/: Cargo.toml  README.md
crates/diff/src/: engine.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: analyzer.rs  graph.rs  lib.rs  query.rs
crates/flow/: Cargo.toml
crates/flow/src/: bridge.rs  conversion.rs  lib.rs  runtime.rs
crates/flow/src/flows/: builder.rs
crates/flow/src/functions/: mod.rs  parse.rs
crates/flow/src/sources/: d1.rs  mod.rs
crates/fs/: Cargo.toml  README.md
crates/fs/src/: lib.rs
crates/lang/: Cargo.toml
crates/langs/: Cargo.toml  README.md
crates/langs/src/: bash.rs  cpp.rs  csharp.rs  css.rs  elixir.rs  go.rs  haskell.rs  html.rs  json.rs  kotlin.rs  lib.rs  lua.rs  parsers.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  yaml.rs
crates/language/: Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  README.md  VENDORED.md
crates/language/benches/: extension_matching.rs  performance.rs
crates/language/src/: bash.rs  constants.rs  cpp.rs  csharp.rs  css.rs  elixir.rs  ext_iden.rs  extension_matcher.rs  go.rs  haskell.rs  html.rs  json.rs  kotlin.rs  lib.rs  lua.rs  parsers.rs  php.rs  profiling.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  yaml.rs
crates/languages/: Cargo.toml  README.md  VENDORED.md
crates/languages/src/: bash.rs  cpp.rs  csharp.rs  css.rs  elixir.rs  go.rs  haskell.rs  html.rs  json.rs  kotlin.rs  lib.rs  lua.rs  parsers.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  yaml.rs
crates/languages/src/threadlang/: config.rs  injection.rs  lang_globs.rs  mod.rs  scan_trace.rs
crates/parse/: Cargo.toml
crates/parse/src/: detection.rs  graph.rs  lib.rs  rust_parser.rs  rust_parser_simple.rs  typed.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/rule-engine/: Cargo.toml  README_SERIALIZATION_ANALYSIS.md  SERIALIZATION_ANALYSIS_REPORT.md  analyze_serialization.rs  separation_helper.sh  serialization_analysis.yml  serialization_analysis_report.md
crates/rule-engine/benches/: README.md  ast_grep_comparison.rs  comparison_benchmarks.rs  rule.yml  rule_engine_benchmarks.rs  simple_benchmarks.rs
crates/rule-engine/serialization_analysis/: README_SERIALIZATION_ANALYSIS.md  SERIALIZATION_ANALYSIS_REPORT.md  analyze_serialization  analyze_serialization.rs  separation_helper.sh  serialization_analysis.yml  serialization_analysis_report.md
crates/rule-engine/src/: check_var.rs  combined.rs  fixer.rs  label.rs  lib.rs  maybe.rs  rule_collection.rs  rule_config.rs  rule_core.rs
crates/rule-engine/src/rule/: deserialize_env.rs  mod.rs  (+5 more)
crates/rule-engine/test_data/: sample_javascript.js  sample_python.py  sample_rust.rs  sample_typescript.ts
crates/services/: Cargo.toml  README.md
crates/services/src/: ag_core_integration.rs  conversion.rs  core_services.rs  error.rs  facade.rs  lib.rs  orchestrator.rs  tower_support.rs  types.rs
crates/services/tests/: integration_tests.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/thread-cocoindex/: Cargo.toml
crates/thread-cocoindex/src/: bridge.rs  lib.rs
crates/thread-core/: Cargo.toml
crates/thread-core/src/: engine.rs  error.rs  lib.rs  location.rs
crates/thread-engine/: Cargo.toml  README.md
crates/thread-engine/src/: analyzer.rs  lib.rs
crates/thread-parse/: Cargo.toml
crates/thread-parse/src/: typed.rs
crates/thread-wasm/: .travis.yml  Cargo.toml
crates/thread-wasm/src/: lib.rs  utils.rs
crates/threadlang/: Cargo.toml
crates/threadlang/src/: config.rs  injection.rs  lang_globs.rs  lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: fastmap.rs  hash_help.rs  hash_tests.rs  lib.rs  simd.rs
crates/wasm/: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md
crates/wasm/src/: lib.rs  utils.rs
crates/wasm/tests/: web.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+262 files in other folders)
