[package]
description = "A safe, fast, flexible code analysis and code parsing library and tool. Built with tree-sitter, ast-grep, and difftastic in Rust."
resolver = "3"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
name = "thread"
version = "0.0.1"
keywords = [
  "parsing",
  "code-analysis",
  "tree-sitter",
  "static-analysis",
  "repository-tools",
  "context"
]
categories = ["development-tools", "parser-implementations", "text-processing"]
repository = "https://github.com/knitli/thread"
documentation = "https://thread.knitli.dev"
homepage = "https://knitli.com"
readme = "README.md"
authors = [
  "Knitli Inc <knitli@knit.li>",
  "Adam Poulemanos for Knitli <adam@knit.li>",
]

[workspace]
members = [
  "crates/thread-cli", "crates/thread-core", "crates/thread-engine", "crates/thread-diff", "crates/thread-fs", "crates/thread-parse", "crates/thread-store", "crates/thread-wasm"
, "xtask"]

# Note: difftastic's diffing functionality is vendored internally
[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.14"

string-interner = "0.19.0" # for fast string interning
serde = { version = "1.0.219", features = ["derive"] } # serialization library

[features]
# default = ["derive", "languages", "parser", "query"]
[build-dependencies]
cc = "*"

[profile.dev]
opt-level = 1
lto = false
debug = true
debug-assertions = true
codegen-units = 256 # More codegen units for faster compilation

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1
panic = "abort"   # Smaller binary size
opt-level = 3     # Maximum optimization

[profile.release-dev]
inherits = "release"
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.wasm-release]
inherits = "release"
lto = true
strip = true
opt-level = "s"   # optimize for size in WASM

# Optimize proc-macros even in debug builds
[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Same lints as tree-sitter itself.
# Lints we allow because they either:
#
# 1. Contain false positives,
# 2. Are unnecessary, or
# 3. Worsen the code

branches_sharing_code = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
checked_conversions = "allow"
cognitive_complexity = "warn"
collection_is_never_read = "allow"
fallible_impl_from = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
inline_always = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
obfuscated_if_else = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
range_plus_one = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
similar_names = "allow"
string_lit_as_bytes = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
transmute_undefined_repr = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
used_underscore_items = "allow"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/knitli/thread"
documentation = "https://thread.knitli.dev"
homepage = "https://knitli.com"
authors = [
  "Knitli Inc <knitli@knit.li>",
  "Adam Poulemanos for Knitli <adam@knit.li>",
]
