# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Xtask for thread. Primarily used for Wasm builds."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["build", "wasm", "xtask"]
categories = ["build-scripts"]
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
pico-args = "0.5.0"  # For command-line argument parsing

[lints]
workspace = true
