# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-ast-engine"
description = "Core AST engine for Thread - parsing, matching, and transforming code using AST patterns. Forked from ast-grep-core."
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]
categories = ["command-line-utilities", "development-tools", "parsing"]
readme = "README.md"
license = "AGPL-3.0-or-later AND MIT"
version = "0.1.0"
authors = [
  "Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>",
  "Knitli Inc <knitli@knit.li>",
  "Adam Poulemanos for Knitli <adam@knit.li>",
]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
thread-utils = { workspace = true, default-features = false, features = [
  "hashers",
  "simd",
] }
thiserror.workspace = true

# Tree-sitter required for parsing
tree-sitter = { workspace = true, optional = true }
# Bit-set and regex required for pattern matching
bit-set = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[features]
default = ["parsing", "matching"]
# The 'parsing' feature enables the tree-sitter backend
parsing = ["dep:tree-sitter"]
# The 'matching' feature enables the pattern matching engine
matching = ["dep:regex", "dep:bit-set"]

[dev-dependencies]
tree-sitter-typescript = "0.23.2"
thread-language = { workspace = true, features = ["builtin-parser"] }
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "performance_improvements"
harness = false

[build-dependencies]
cc = "1.2.30"

[lints]
# Enable linting for the crate
workspace = true
