# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
ast-grep-core = { version = "0.38.6", optional = true }
# We don't want to import any languages here by default; we're only getting the Language and LanguageExt traits.
ast-grep-language = { version = "0.38.6", optional = true }

ropey = { workspace = true }
dashmap = { workspace = true, optional = true }
string-interner = { workspace = true, features = ["backends", "serde", "std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
local = ["dashmap", "dashmap/rayon"]
production = ["dash-inline", "string-interner/inline-more"]


dash-inline = ["dashmap/inline"]
# Enables dashmap as the FastMap backend; default is standard HashMap
dashmap = ["dashmap/rayon"]
wasm-single-thread = []


[lints]
workspace = true
