# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
thread-ast-grep = { workspace = true, features = ["all-core", "language"] }
thread-languages = { workspace = true, features = ["threadlang"], optional = true }

rapidhash.workspace = true
ropey = { workspace = true }
dashmap = { workspace = true, optional = true }
string-interner = { workspace = true, features = ["backends", "serde", "std"] }
serde = { workspace = true, features = ["derive", "std"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
ignore.workspace = true
tower-service = { workspace = true, optional = true }

[features]
default = ["local", "serde", "services"]
local = ["dashmap", "dashmap/rayon"]
production = ["dash-inline", "string-interner/inline-more"]
serde = ["serde_json", "serde/derive", "serde/std", "thread-ast-grep/serde", "thread-languages/serde"]
services = ["thread-languages/threadlang", "tower-service"]

dash-inline = ["dashmap/inline"]
# Enables dashmap as the FastMap backend; default is RapidHashMap
dashmap = ["dashmap/rayon"]
wasm-single-thread = []


[lints]
workspace = true
