# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
thread-tree-sitter = { workspace = true }
thread-threadlang.workspace = true
thread-utils = { workspace = true }

rapidhash.workspace = true
ropey = { workspace = true }
serde = { workspace = true, features = ["derive", "std"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
ignore.workspace = true
tower-service = { workspace = true, optional = true }

[features]
default = ["local", "serde", "services"]
local = ["thread-utils/dashmap"]
production = ["dash-inline"]
serde = [
    "dep:serde",
    "serde_json",
    "serde/derive",
    "serde/std",
    "thread-tree-sitter/serde",
    "thread-threadlang/serde",
]
services = ["thread-threadlang", "tower-service"]

dash-inline = ["dashmap/inline"]
# Enables dashmap as the FastMap backend; default is FastMap
dashmap = ["dashmap/rayon"]
wasm-single-thread = []


[lints]
workspace = true
