[package]
name = "thread-derive"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full", "fold"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"

[lints]
workspace = true
