[package]
name = "thread-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Analysis engine implementation for Thread code analysis"
keywords = ["parsing", "code-analysis", "static-analysis", "graph-algorithms"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
thread-core = { path = "../core" }
thread-parse = { path = "../parse" }
thread-store = { path = "../store" }

# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

# Graph processing
petgraph = "0.8.2"

# Performance
rayon = "1.10"
