# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-engine"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Analysis engine implementation for Thread code analysis"
keywords = ["parsing", "code-analysis", "static-analysis", "graph-algorithms"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
thread-core = { workspace = true }
thread-parse = { workspace = true }
thread-store = { workspace = true }

# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

# Graph processing
petgraph = "0.8.2"

# Performance
rayon = "1.10"
