[package]
name = "thread-flow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Thread dataflow integration for data processing pipelines, using CocoIndex."
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
# CocoIndex dependency
cocoindex = { path = "../../vendor/cocoindex/rust/cocoindex" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Workspace dependencies
thread-ast-engine = { workspace = true }
thread-language = { workspace = true, features = [
  "javascript",
  "matching",
  "python",
  "rust",
  "tsx",
  "typescript"
] }
thread-services = { workspace = true, features = [
  "ast-grep-backend",
  "serialization"
] }
thread-utils = { workspace = true }
tokio = { workspace = true }

[features]
default = []
worker = []  # Feature flag for Edge deployment specific logic
