# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-fs"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
ignore.workspace = true
thread-ast-grep = { workspace = true, features = [
    "matcher",
    "tree-sitter",
    "language",
] }
thread-core = { workspace = true }

[features]
default = ["dashmap"]
production = ["thread-core/production"]
dashmap = ["thread-core/dashmap"]

[lints]
workspace = true
