# SPDX-FileCopyrightText: 2025 Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>
# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT
#
# Big thanks to the ast-grep project. Check them out! https://github.com/ast-grep/ast-grep

[package]
name = "thread-langs"
# Reset version from ast-grep's - their 0.3.8, our 0.1.0
version = "0.1.0"
description = "A forked and slightly modified version of Ast-Grep's language support, using Ast-Grep's unified language interface over Tree-sitter parsers. Forked at 0.3.8."
# Why fork it? Ast-Grep's language crate doesn't have direct public access to the languages. We also needed finer control of language features. And, of course, Herrington Darkholme's work is wonderful and not worth trying to replicate.
authors = [
    "Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>",
    "Knitli Inc <knitli@knit.li>",
    "Adam Poulemanos for Knitli <adam@knit.li>",
]
edition = "2021"
# NOTE: We kept the original licensing from the forked ast-grep-language crate. The rest of Thread is AGPL 3.0, but this entire crate is MIT licensed.
license = "MIT"
documentation.workspace = true
repository.workspace = true

rust-version = "1.70"
readme = "README.md"

# TODO: Add toml, markdown, pkl
# Other candidates: dockerfile, julia, just, jsdoc, ocaml, cuda, hcl, hlsl, make, meson, nix, nu, r, regex, scss, solidity, sql, svelte, xml, vue, zig
# TODO: Integrate tree-sitter wasmtime support
[dependencies]
thread-core = { features = ["all"], path = "../core" }
tree-sitter = { version = "0.25.6", features = ["std"] }
ignore.workspace = true
serde.workspace = true

tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-css = { version = "0.23.2", optional = true }
tree-sitter-elixir = { version = "0.3.4", optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-haskell = { version = "0.23.1", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.23.1", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-kotlin = { version = "0.4.0", optional = true, package = "tree-sitter-kotlin-sg" }
tree-sitter-lua = { version = "0.2.0", optional = true }
tree-sitter-php = { version = "0.23.11", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-swift = { version = "0.7.1", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.1", optional = true }

[build-dependencies]
cc = "1.2.29"

[features]
default = ["all"]

bash = ["tree-sitter-bash"]
c = ["tree-sitter-c"]
cpp = ["tree-sitter-cpp"]
c-sharp = ["tree-sitter-c-sharp"]
css = ["tree-sitter-css"]
elixir = ["tree-sitter-elixir"]
go = ["tree-sitter-go"]
haskell = ["tree-sitter-haskell"]
html = ["tree-sitter-html"]
java = ["tree-sitter-java"]
javascript = ["tree-sitter-javascript"]
json = ["tree-sitter-json"]
kotlin = ["tree-sitter-kotlin"]
lua = ["tree-sitter-lua"]
php = ["tree-sitter-php"]
python = ["tree-sitter-python"]
ruby = ["tree-sitter-ruby"]
rust = ["tree-sitter-rust"]
scala = ["tree-sitter-scala"]
swift = ["tree-sitter-swift"]
typescript = ["tree-sitter-typescript"]
tsx = ["tree-sitter-typescript"] # TypeScript with TSX support
yaml = ["tree-sitter-yaml"]

web = ["css", "html", "javascript", "typescript", "tsx"]

non-web = [
    "bash",
    "c",
    "cpp",
    "c-sharp",
    "elixir",
    "go",
    "haskell",
    "java",
    "json",
    "kotlin",
    "lua",
    "php",
    "python",
    "ruby",
    "rust",
    "scala",
    "swift",
    "yaml",
]

all = [
   "web",
   "non-web",
]


[lints]
workspace = true
